@startuml

title __ONBOARDING's Class Diagram__\n

  namespace com.doitstudio.sleepest_master {
    namespace onboarding {
      class com.doitstudio.sleepest_master.onboarding.OnboardingActivity {
          {static} + viewPager : ViewPager
          # onCreate()
      }
    }
  }
  

  namespace com.doitstudio.sleepest_master {
    namespace onboarding {
      class com.doitstudio.sleepest_master.onboarding.OnboardingViewPagerAdapter {
          ~ timer : Timer
          - context : Context
          - dots : List<ImageView>
          - durationHours : int
          - durationMinutes : int
          - enableStartApp : boolean
          - endTimeText : String
          - endTimeValueText : String
          - endtime : int
          - indicators : List<ImageView>
          - notFirstAppStart : boolean
          - startTimeText : String
          - startTimeValueText : String
          - starttime : int
          + OnboardingViewPagerAdapter()
          + destroyItem()
          + getCount()
          + instantiateItem()
          + isViewFromObject()
          + onClick()
          - checkAllPermissions()
      }
    }
  }
  

  com.doitstudio.sleepest_master.onboarding.OnboardingActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.doitstudio.sleepest_master.onboarding.OnboardingActivity o-- com.doitstudio.sleepest_master.onboarding.OnboardingViewPagerAdapter : onboardingViewPagerAdapter
  com.doitstudio.sleepest_master.onboarding.OnboardingViewPagerAdapter .up.|> android.view.View.OnClickListener
  com.doitstudio.sleepest_master.onboarding.OnboardingViewPagerAdapter -up-|> androidx.viewpager.widget.PagerAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
